# moonpies

./: .gitignore  .model.prof  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  main.py  my_config.py  package.sh  pyproject.toml  strat_layers.csv  strat_output.csv
.github/: pypi_publish.yml
.github/workflows/: pypi_publish.yml
code/: ballistic.ipynb  cannon2020.ipynb  cannon2020.py  cannon2020_ds02.m  fig_impact_sequence.py  impactor_ice.ipynb  mixing.py  mixing_210607.py  mixing_210617.py  overturn.ipynb  overturn.py  test.ipynb
data/: ballistic_hop_coldtraps.csv  ballistic_sed_frac_melted_mean.csv  ballistic_sed_frac_melted_std.csv  ballistic_sed_teq.csv  basin_list.csv  cannon2020_crater_ages.csv  costello_etal_2018_t1.csv  costello_etal_2018_t1_expanded.csv  crater_list.csv  distant_craters_ejecta_reach_lt_6_deg_spole.csv  haworth_ejecta_thickness.csv  horz_etal_1983_table2_fig19.csv  needham_kring_2017_s3.csv
docs/: api.rst  conf.py  index.rst  model_overview.md  moonpies.md  overview.rst  quickstart.md  quickstart.rst  readme.md  requirements.txt
essi21/: config.py  mixing.prof  mixing.py
figs/: ensemble_plot.prof  ensemble_plot.py  fig_impact_sequence.py  haworth_strat_trial_data2.csv  impact_sequence.gif:Zone.Identifier  mpl_setup.py  strat_cols.ipynb  strat_fig.py  strat_trial.py
figure_scripts/: Absolute_Model_Ages.ipynb  KE_contours.py  Strat_figs_final.py  aggregate.py  aggregated.ipynb  ballistic_hop.py  basin_ice.py  comets_vels.py  crater_basin_ages.py  crater_scaling_plotting.py  distances.py  ensemble_plot.py  find_recent_layer.py  fsave.csv  ice_retention.py  moonPIES_stats.py  overturn_figs.py  plot_by_module.py  plot_figs.py  plot_volc_sol_wind.py  results_violin_total_ice.py  sensitivity_test.py  strat_cols_seeds.csv  strat_columns.py  thermal_eq.py
moonpies/: .model.prof  __init__.py  _version.py  cannon_config.py  classes.py  cli.py  config.py  default_config.py  ensemble_plot.py  moonpies.py  moonpies_scraps.py  mpies_scraps.py  my_config.py  plotting.py  sensitivity_test.ipynb  thermal_eq.py
moonpies/data/: .moonpies.mplstyle  bahcall_etal_2001_t2.csv  ballistic_hop_coldtraps.csv  ballistic_sed_frac_melted_mean.csv  ballistic_sed_frac_melted_std.csv  crater_list.csv
notebooks/: 2023_JGR_figs.ipynb  2023_JGR_sup_figs.ipynb  Ejecta_Thickness_Module2.ipynb  aggregate.py  ballistic_kinetic_energy.ipynb  bsed_strat.ipynb  bsed_temp_fernandes_artemieva.ipynb  cannon2020.ipynb  efficiency.ipynb  ejecta_thickness.ipynb  emsemble.ipynb  impactor_ice.ipynb  overturn.ipynb  overturn_figs.ipynb  plot_by_module.ipynb  robbins_polar_craters.ipynb  sensitivity_test.ipynb  test_bsed.ipynb  test_coords.ipynb  test_random.ipynb  test_scaling.ipynb
notebooks/figure_scripts/: aggregate.py  plot_figs.py
notebooks/figure_scripts/older_scripts/: Remote_sensing_regimes.py  ensemble_plot.py  overturn_figs.py
other_modules/: Crater_scaling.ipynb  Sublimation_Module.ipynb  ball_sed.py  ballistic.py  ballistic_sed_depth_v2.py  ballistic_sed_depth_v3.py  ballistic_sed_depth_v4.py  crater_laws.py  definitions_update.py  ejecta_distances_circles.py  ejecta_laws.py  ejecta_thickness_complex.ipynb  ejecta_thickness_simple.ipynb  gardening_depth.py  get_overturn_u.py  get_volcanic_ice_v3 (1).py  moonpies_comets.py  overturn.py  solar_wind.py  solar_wind_v3.py  solar_wind_v4.py  solar_wind_v5.py  strat_fig.py  strat_output.csv  test_strat_fig.ipynb  thermal_eq.py
other_modules/other_tests/: test_ali.py  test_katelyn.py  test_kristen.py  test_moonpies_kristen.py  test_tyler.py
refs/: cannon2020.docx
scripts/: cannon2020.py  cannon2020_ds01.m
scripts/Xie_etal_2020_ballistic_sed/: Ballistic_Sedimentation_Model.m  BasinFormationSequence.xlsx  Dat2D.m  Figure10c.m  README.md
test/: test_mixing.py  test_moonpies.py
