[tool.poetry]
name = "moonpies"
version = "0.1.2"
description = "Moon Polar Ice and Ejecta Stratigraphy model"
authors = ["Christian Tai Udovicic <cj.taiudovicic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
numpy = "^1.15"
pandas = "^1.0"
matplotlib = "^3.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^21.6b0"
pylint = "^2.9.3"
pytest = "^6.2.4"
pandoc = "^1.1.0"
snakeviz = "^2.1.0"

[tool.black]
line-length=79
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
  | moonpies/default_config.py
)
'''

[tool.pylint.typecheck]
generated-members=["pandas.*","pd.*"]

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
disable=["R0913","C0103","E1136","E1137","W0511"]
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
