[tool.poetry]
name = "moonpies"
version = "1.0.0"
description = "Moon Polar Ice and Ejecta Stratigraphy model"
authors = ["Christian J. Tai Udovicic <cjtu@nau.edu>", "Katelyn R. Frizzell", "Kristen M. Luchsinger", "Alissa Madera", "Tyler G. Paladino"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.17"
pandas = "^1.0"
matplotlib = "^3.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^22.3.0"
pylint = "^2.9.3"
pytest = "^6.2.4"
pandoc = "^1.1.0"
snakeviz = "^2.1.0"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
myst-parser = "^0.15.1"
numpydoc = "^1.1.0"
seaborn = "^0.11.2"

[tool.black]
line-length=79
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.venv
    | _build
    | build
    | dist
  )/
  | moonpies/default_config.py
)
'''

[tool.pylint.typecheck]
generated-members=["pandas.*","pd.*"]

[tool.pylint.reports]
output-format="colorized"
reports="y"
disable=["R0913","C0103","E1136","E1137","W0511"]
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
